Add isAdmin to reponse body of getUserInfo endpoint. Change sendEmailPython function to sendEmail
